<resources>
    <string name="app_name">Inventory</string>
    <string name="empty_view_title_text">The shelves are empty...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="editor_activity_title_new_product">Add a new product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_price">Price</string>
    <string name="symbol_USD">USD</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_failed">Error with deleting the product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="categoryProductName">Name</string>
    <string name="categoryProductQuantity">Quantiy</string>
    <string name="categoryProductPrice">Price</string>
    <string name="categoryProductVendor">Vendor</string>
    <string name="hint_product_vendor">Vendor Name</string>
</resources>
