<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMaster"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->


        <!-- Label -->
    <LinearLayout
        android:id="@+id/layoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtName"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:text="@string/categoryProductName"/>

        <EditText
            android:id="@+id/edtName"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords"/>
    </LinearLayout>

        <!-- Input fields -->

    <LinearLayout
        android:id="@+id/layoutQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtQuantity"
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/categoryProductQuantity"/>

        <EditText
            android:id="@+id/edtQuantity"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/hint_product_quantity"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPrice"
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/categoryProductPrice"/>

        <EditText
            android:id="@+id/edtPrice"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/hint_product_price"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutVendor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtVendor"
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/categoryProductVendor"/>

        <EditText
            android:id="@+id/edtVendor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_product_vendor"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddRemoveQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Add Quantity"/>

        <Button
            android:id="@+id/btnRemoveQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Remove Quantity"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPicture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@mipmap/ic_launcher"/>

        <Button
            android:id="@+id/btnChoosePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose Picture"/>

        <Button
            android:id="@+id/btnSendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Send email "/>

        <EditText
            android:id="@+id/edtImage"
            style="@style/EditorFieldStyle"
            android:hint="@string/image_label"
            android:inputType="text"
            android:visibility="gone"/>
    </LinearLayout>


</LinearLayout>
